Client Impersonation/salesforce/main/default/objects/Client_Impersonation__c/Client_Impersonation__c.object-meta.xml
<CustomObject>
    <label>Client Impersonation</label>
    <pluralLabel>Client Impersonations</pluralLabel>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Impersonation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores client impersonation links for lawyers to view documents from a client's perspective</description>
</CustomObject>