Client Impersonation/salesforce/main/default/objects/Client_Impersonation__c/fields/Allow_Approve__c.field-meta.xml
<CustomField>
    <fullName>Allow_Approve__c</fullName>
    <label>Allow Approve</label>
    <description>Whether the lawyer can approve documents in this impersonation session</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>