Client Impersonation/salesforce/main/default/objects/Client_Impersonation__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <description>When this impersonation link expires</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>