Client Impersonation/salesforce/main/default/objects/Client_Impersonation__c/fields/Is_Revoked__c.field-meta.xml
<CustomField>
    <fullName>Is_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this impersonation link has been manually revoked (invalidated) before use. Set to true when a newer link is generated by the same user.</description>
    <label>Is Revoked</label>
    <type>Checkbox</type>
</CustomField>