Client Impersonation/salesforce/main/default/objects/Client_Impersonation__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <label>Journal</label>
    <description>The journal being impersonated</description>
    <type>Lookup</type>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Client Impersonations</relationshipLabel>
    <relationshipName>Client_Impersonations</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>