Client Impersonation/salesforce/main/default/objects/Client_Impersonation__c/fields/Used_At__c.field-meta.xml
<CustomField>
    <fullName>Used_At__c</fullName>
    <label>Used At</label>
    <description>First use timestamp for audit trail</description>
    <type>DateTime</type>
</CustomField>